# Applied-AI-Builder---Assignment-Evaluation-Guide

./: .env.example  .gitignore  DDR_Example.html  DDR_Example.md  Dockerfile  LICENSE  Makefile  PKG-INFO  README.md  SOURCES.txt  SUBMISSION.md  __init__.py  app.py  build_sample_pdfs.py  cli.py  config.py  config.yaml  conftest.py  entry_points.txt  extraction.py  ingest.py  inspection_report.md  llm.py  models.py  pipeline.py  pyproject.toml  report.py  requirements.txt  requires.txt  test_extraction.py  test_pipeline.py  test_report.py  thermal_report.md
